# ME

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Machine_Empire_Architecture.md  Machine_Empire_Art_Bible.md  Machine_Empire_Game_Design.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md
.github/workflows/: build.yml  deploy.yml
Assets/: manifest.json
Assets/atlases/: Sentinel_Death.json  Sentinel_Idle.json  Sentinel_Move.json  Sentinel_Shoot.json  Thrall_Death.json  Thrall_Idle.json  Thrall_Move.json  Thrall_Shoot.json  command_post.json  forge.json  hover_tank.json  manifest.json
client/: index.html  package.json  tsconfig.json  tsconfig.sw.json  vite.config.ts
client/public/: manifest.json
client/src/: GameFlowController.ts  config.ts  main.ts  sw.ts
client/src/audio/: SoundManager.ts
client/src/bridge/: BufferReader.ts  CampaignBattleAdapter.ts  CampaignBridge.ts  CampaignTypes.ts  GameBridge.ts  types.ts
client/src/input/: CampaignInputManager.ts  InputManager.ts  MoveOrderIndicator.ts  SelectionBox.ts  SelectionIndicator.ts  TouchHandler.ts
client/src/network/: NetBridge.ts  Socket.ts
client/src/render/: BattleViewProjection.ts  (+12 more)
crates/core/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: connection.rs  http_api.rs  lobby.rs  main.rs  match_runner.rs  server_state.rs  state_broadcaster.rs  ws_server.rs
crates/server/src/mcp/: mod.rs  resources.rs  server.rs  tools.rs  types.rs
crates/server/tests/: server_integration.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
(+69 files in other folders)
