[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/wasm",
    "crates/server",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
