[package]
name = "machine-empire-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "machine-empire-server"
path = "src/main.rs"

[dependencies]
machine-empire-core = { path = "../core", features = ["headless"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
